Bug 125383 - Dialog theming/UX - scaling of tunneled dialog may lead to missing application menu
Summary: Dialog theming/UX - scaling of tunneled dialog may lead to missing applicatio...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-20 09:04 UTC by Nicolas Christener
Modified: 2019-08-16 07:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Video demonstrating the issue (1.11 MB, video/mp4)
2019-05-20 09:06 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-05-20 09:04:42 UTC
Description:
When "zooming" a tunneled dialog in the iOS app the application menu sometimes disapears and the user has no chance to get it back.

Steps to Reproduce:
1. Open a tunneled dialog and double tap on an "input" widget (e.g. input box)
2. Close the dialog


Actual Results:
The application menu is not visible anymore.

Expected Results:
The application menu should still be visible.


Reproducible: Always


User Profile Reset: No



Additional Info:
Maybe closing a tunneled dialog could/should reset the zoom of the view back to 100%

I'll upload a video which shows the issue.
Comment 1 Nicolas Christener 2019-05-20 09:06:54 UTC
Created attachment 151526 [details]
Video demonstrating the issue
Comment 2 Xisco Faulí 2019-05-27 11:35:04 UTC
Moving to NEW as agreed in the ESC meeting
Comment 3 How can I remove my account? 2019-06-05 13:07:31 UTC
This seems to be related to using an external keyboard. I can reproduce it only when I turn on my external keyboard. Weird...
Comment 4 How can I remove my account? 2019-06-05 13:08:16 UTC
The menu and toolbar re-appear if you double-click in the document.
Comment 5 How can I remove my account? 2019-06-05 13:11:21 UTC
I mean double-tap.
Comment 6 How can I remove my account? 2019-06-05 13:29:40 UTC
Actually just tapping once in the document makes the menu and toolbar re-appear.
Comment 7 How can I remove my account? 2019-06-05 14:28:13 UTC Comment hidden (off-topic)
Comment 8 How can I remove my account? 2019-06-05 18:08:05 UTC
I suspect it might be the call

> $('#' + strId).parent().css({display: 'none'});

in loleaflet/src/control/Control.LokDialog.js that causes the menubar and toolbar to be hidden, because I think that when I had commented out that, they did not seem to disappear whatever I did. But playing with this code is not 100% repeatable all the time, so it might be just luck, and it is just a guess. Anyway, I don't understand the code at all, so it would be much better if somebody who actually understands it could give some input...
Comment 9 How can I remove my account? 2019-06-11 09:32:33 UTC
(nah, probably the line mentioned in my previous comment has nothing to do with it)
Comment 10 How can I remove my account? 2019-06-11 11:48:59 UTC
Reliable reproduction steps:

Open the Format > Paragraph... dialog.

Resize the dialog to be a lot smaller.

Double-click somewhere in the dialog outside the controls in it.

=> You will notice that the document behind the dialog zooms in a lot, and the menubar and toolbar disappear.

Click the "Cancel" button in the dialog.

=> The dialog goes away, and there is stil not menubar or toolbar.

At least with an external (Bluetooth) keyboard, this works every time.

Clicking in the document at this stage brings back the menubar and toolbar. But they are zoomed and not all of them is visible. (But it works to pinch-zoom the toolbar and menubar smaller...)
Comment 11 Nicolas Christener 2019-08-16 07:16:24 UTC
I tried to trigger this in 4.1.51 (51) - it seems, that the issue is fixed.

@tor can you still reproduce it?
Comment 12 How can I remove my account? 2019-08-16 07:46:15 UTC
I can't reproduce, no. So let's mark this as resolved