Prevent the user from zooming the WebView

Does not fix tdf#125383, though. The WebView still can become zoomed
by manipulating a tunnelled dialog as described in the bug report's
comments.

Change-Id: I9af8d826c58e2065e54b42bc35f74436b0d34a90